<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"    
    android:background="@android:color/white"
    >
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:textAppearance="@style/labelTextApp"
        android:text="@string/dep_st_text_prompt"
    />
    <Spinner 
        android:id="@+id/dep_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/list_prompt"
    />		
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:textAppearance="@style/labelTextApp"
        android:text="@string/arr_st_text_prompt"
    />
    <Spinner 
        android:id="@+id/arr_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:prompt="@string/list_prompt"
    />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:textAppearance="@style/labelTextApp"
	        android:text="@string/dep_arr_text_prompt"
	        android:gravity="left"
	    />
	    <TextView
	    	android:id="@+id/time_val"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:textAppearance="@style/textApp"
	        android:gravity="right"	        
	    />
	</LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    >
	    <Spinner 
	        android:id="@+id/dep_arr_spinner"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:prompt="@string/dep_arr_prompt"
	    />
	    <Button
	     	android:id="@+id/time_btn"
	     	android:layout_width="wrap_content"
	     	android:layout_height="wrap_content"
	     	android:layout_weight="1"
	     	android:textAppearance="@style/labelTextApp"
	     	android:text="@string/pick_time"
	    />
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    >
	    <TextView
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
      	  	android:layout_marginTop="10dip"
      	  	android:textAppearance="@style/labelTextApp"
       		android:text="@string/date_text_prompt"
       		android:gravity="left"
    	/>
	    <TextView
	    	android:id="@+id/date_val"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:gravity="right"
	        android:textAppearance="@style/textApp"
	    />
	</LinearLayout>
	
	<Button
	     	android:id="@+id/date_btn"
	     	android:layout_width="fill_parent"
	     	android:layout_height="wrap_content"	
	     	android:textAppearance="@style/labelTextApp"     	
	     	android:text="@string/pick_date"
	    />
    <Button
     android:id="@+id/search_btn"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:textAppearance="@style/labelTextApp"
     android:text="@string/submit_search"
    />
</LinearLayout>
